# hello-world

./: CMakeLists.txt  Makefile  Quadrilateral.cpp  README.md  Square.cpp  Trapezoid.cpp  TutorialConfig.h.in  main  main.cpp
